--- a/assets/css/templates/_about.scss
+++ b/assets/css/templates/_about.scss
@@ -20,6 +20,6 @@
 
 @media screen and (min-width: 1280px) {
   .about .project__text--longform {
-    padding-bottom: 5vw;
+    padding-bottom: 2.5vw;
   }
 }
